--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2188,14 +2188,15 @@ input, select, textarea {
 			}
 
 		.image.avatar {
-			border-radius: 100%;
+			border-radius: 20%;
 			overflow: hidden;
 		}
 
 			.image.avatar img {
-				border-radius: 100%;
+				border-radius: 10%;
 				display: block;
 				width: 100%;
+				height: 100%;
 			}
 
 		.image.main {
@@ -2378,11 +2379,14 @@ input, select, textarea {
 		padding-left: 0;
 	}
 
+	.iconify{
+		font-size: xx-large;
+	}
+
 		ul.feature-icons li {
 			text-decoration: none;
 			display: inline-block;
 			margin: 0 0 1.6875em 0;
-			padding: 0.35em 0 0 3.5em;
 			position: relative;
 			vertical-align: top;
 			width: 48%;
